Filters added in swagger parameters
